--- a/manuscripts/24-usman-mus-diversity/24-usman-msd.qmd
+++ b/manuscripts/24-usman-mus-diversity/24-usman-msd.qmd
@@ -141,6 +141,7 @@ results_life <- here_read_qs("results_life", push_mods)
 results_psych<- here_read_qs("results_psych", push_mods)
 results_social<- here_read_qs("results_social", push_mods)
 results_present<- here_read_qs("results_present", push_mods)
+results_health<- here_read_qs("results_health", push_mods)
 
 
 #predictions
@@ -189,10 +190,10 @@ present_pwb_d  <- results_present$plots$`PWB Your Relationships`+ scale_y_contin
 # access individual plots Religion
 religion_relid <- results_religion$plots$`Religious Identification Level`+ theme(
     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1))
-  )
+  
 religion_spirid <- results_religion$plots$`Spiritual Identification Level`+ theme(
     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1))
-  )
+  
 
 religion_church <- results_religion$plots$`Monthly Religious Service Attendence` + theme(axis.text.x = element_text(
   angle = 20,
@@ -231,6 +232,7 @@ religion_spirit <- results_religion$plots$`Belief in Spirit`+ scale_y_continuous
   angle = 20,
   hjust = 1,
   vjust = 1
+)) 
 
 
 # access individual plots discrimination
@@ -245,8 +247,26 @@ discrim_gender<- results_discrim$plots$`Perceived Gender Discrimination`+ theme(
 discrim_age <- results_discrim$plots$`Perceived Age Discrimination`+ theme(
     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1))
     
-    
 
+# access individual plots health
+
+health_sleep <- results_health$plots$Sleep+ theme(
+    axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1)) +  scale_y_continuous(limits = c(.5,15))
+health_sleep
+
+health_exercise <- results_health$plots$`Hours of Exercise (log)`+ theme(
+    axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1)) +  scale_y_continuous(limits = c(0,6))
+health_exercise
+
+exp(1)-1
+exp(2)-1
+exp(3)-1
+exp(4)-1
+
+health_short_form_health <- results_health$plots$`Short Form Health`+ theme(
+    axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1))  +  scale_y_continuous(limits = c(.5,7))
+    
+health_short_form_health
 # access individual plots psychological wellbeing
 life_grd <- results_life$plots$Gratitude+ theme(
     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1)
@@ -326,34 +346,39 @@ social_support_c <- results_social$plots$`Support - Someone to Turn To`+ scale_y
 
 # combo plots
 
-plot_belief <- religion_god + religion_spirit + plot_annotation(title = "Religious Beliefs",subtitle = "Adjusted for Age, Born in NZ, Education, Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
+plot_belief <- religion_god + religion_spirit + plot_annotation(title = "Religious Beliefs",subtitle = "Adjusted for Age, Born in NZ,Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
 
-plot_practice <- religion_church / (religion_prayer + religion_scripture)+ plot_annotation(title = "Religious Practice",subtitle = "Adjusted for Age, Born in NZ, Education, Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
+plot_practice <- religion_church / (religion_prayer + religion_scripture)+ plot_annotation(title = "Religious Practice",subtitle = "Adjusted for Age, Born in NZ,Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
 
-plot_id <- religion_relid + religion_spirid + plot_annotation(title = "Religious and Spiritual Identification",subtitle = "Adjusted for Age, Born in NZ, Education, Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
+plot_id <- religion_relid + religion_spirid + plot_annotation(title = "Religious and Spiritual Identification",subtitle = "Adjusted for Age, Born in NZ,Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
 
-plot_life <- life_grd + life_sat + life_mp + life_ms + plot_annotation(title = "Life-Reflective Well-Being",subtitle = "Adjusted for Age, Born in NZ, Education, Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
+plot_life <- life_grd + life_sat + life_mp + life_ms + plot_annotation(title = "Life-Reflective Well-Being",subtitle = "Adjusted for Age, Born in NZ,Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
 
 plot_descrim <- discrim_age  + discrim_gender + discrim_ethnic + discrim_religious +
-  plot_annotation(title = "Perceived Dicrimination",subtitle = "Adjusted for Age, Born in NZ, Education, Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
+  plot_annotation(title = "Perceived Dicrimination",subtitle = "Adjusted for Age, Born in NZ,Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
 
 
 plot_social_belong <- social_belong_a  + social_belong_b + social_belong_c  +social_neighbourhood +
-  plot_annotation(title = "Social Belonging and Neighbourhood Community",subtitle = "Adjusted for Age, Born in NZ, Education, Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
+  plot_annotation(title = "Social Belonging and Neighbourhood Community",subtitle = "Adjusted for Age, Born in NZ,Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
 
 plot_social_support <- social_belong_a  + social_belong_b + social_belong_c   +
-  plot_annotation(title = "Social Belonging",subtitle = "Adjusted for Age, Born in NZ, Education, Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
+  plot_annotation(title = "Social Belonging",subtitle = "Adjusted for Age, Born in NZ,Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
 
 
 plot_social_support <- social_belong_a  + social_belong_b + social_belong_c   +
-  plot_annotation(title = "Social Belonging",subtitle = "Adjusted for Age, Born in NZ, Education, Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
+  plot_annotation(title = "Social Belonging",subtitle = "Adjusted for Age, Born in NZ,Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
 
 plot_present_a <- present_esteem + present_forgive + present_perfect +
-  plot_annotation(title = "Personal Well-Being Indicators",subtitle = "Adjusted for Age, Born in NZ, Education, Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
+  plot_annotation(title = "Personal Well-Being Indicators",subtitle = "Adjusted for Age, Born in NZ,Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
 
 plot_present_b <- present_pwb_a + present_pwb_b + present_pwb_c + present_pwb_d +
-  plot_annotation(title = "Personal Well-Being Index",subtitle = "Adjusted for Age, Born in NZ, Education, Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
+  plot_annotation(title = "Personal Well-Being Index",subtitle = "Adjusted for Age, Born in NZ,Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
 
+
+plot_health <- health_short_form_health  + (health_exercise /  health_sleep) +
+  plot_annotation(title = "Biological Health",subtitle = "Adjusted for Age, Born in NZ,Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
+
+plot_health
 
 # checks
 plot_belief
@@ -372,6 +397,13 @@ plot_social_support
 
 measures_path_rstudio <- here::here("manuscripts", "24-usman-mus-diversity")
 measure_data <- readRDS(here::here(measures_path_rstudio, "merged_db.rds"))
+
+outcome_measures <- boilerplate::boilerplate_report_measures(
+  baseline_vars = baseline_vars,
+  outcome_vars = outcome_vars,
+  measure_data = measure_data
+)
+
 ```
 
 
@@ -392,23 +424,7 @@ Third, this project serves as a model for developing panel studies of under-repr
 
 ## Method
 
-
-
-
-```{r}
-#| eval: false
-#| include: false
-outcome_measures <- boilerplate::boilerplate_report_measures(
-  baseline_vars = baseline_vars,
-  outcome_vars = outcome_vars,
-  measure_data = measure_data
-)
-cat(outcome_measures)
-
-```
-
-
-{{< pagebreak >}}
+Measures are presented in [Appendix A](#appendix-a)
 
 ### Sample
 
@@ -419,43 +435,44 @@ The New Zealand Attitudes and Values Study is a national probability study desig
 
 ### Design 
 
-First, we report descriptive demographic information about the Muslim sample.  We do so by comparing it to the secular sample and to other religious groups. 
+We compare and contrast the Muslim sample with other religious groups, including those secular people who do not identify as religious. This research is descriptive an exploratory. 
 
-Second, we model religion related features, adjusting for demongraphic variables that cannot be, or are unlikely to be, causal affected by religious affiliation: age, born in New Zealand, ethnicity, education, and gender (male, not male). 
+Study 1 reports religious beliefs, identity, and practices of Muslims and other religious groups.
 
-Third, we model perceived prejduce, adjusting for these same demongraphic indicators 
+Study 2 reports perceived religious, ethnic, gender, and age-based prejudice.
 
-Forth, we model multi-demonional well-being, again adjusting for demographic indicators, along the following dimensions: 
+Study 3 reports indicators related to biological health
 
-  a. Biological Health
-  b. Psychological Health
-  c. Self-Related Well-Being
-  d. Life-Related Well-Being
-  e. Social Well-Being.
+Study 4 reports self-related well-being
 
-We emphasise that our models are discriptive. They are meant to describe features of the population from whom we sampled. Causality cannot be, and should not be, inferred from these cross-sectional associations. 
+Study 5 reports life-related well-being
+
+Study 6 reports social well-being. 
 
 
+In studies 2-7, our models adjust for the following demographic indicators that are unlikely to be affected by religious (or secular affiliation): age, gender, whether someone is New Zealand Born, and ethnicity.  Such adjustments allow us to focus on those features of multi-dimensional well-being that associated with religious (and secular) affiliation. 
+
+
+ 
 ### Eligibility Criteria
 
-To be eligible, participants needed to respond to the 2023 wave of the New Zealand Attitudes Study, and to have complete information about religious identification (yes or no). A total of `r n_participants` individuals met these criteria and were included in the study. 
-
+Participants needed to respond to the 2023 wave of the New Zealand Attitudes Study, and to have complete information about religious identification (yes or no). A total of `r n_participants` individuals met these criteria and were included in the study. 
 
 
 
 ### Missing Data
 
-To mitigate bias from missing data, we employed the `ppm` algorithm from the `mice` package in R [@vanbuuren2018] to impute missing responses.  Overall missingness reponses accounted for less than 1% of total responses (`r prop_miss_case`).
+To mitigate bias from missing data, we imputed missing responses using the `ppm` algorithm from the `mice` package in R [@vanbuuren2018].  Overall missingness accounts for less than `r prop_miss_case`% if the data. However, we note that missingness for certain indicators among Muslims is considerably higher than among other groups ... 
 
 
-## Results 
+### Demographic Statistics and Sample Responses
 
-### Demographic Statistics
-
-Demographic data religious denominations are presented in @tbl-demography. 
+@tbl-demography presents demographic data by religious affiliation, including secular affiliation.
 
 
 ::: {#tbl-demography}
+@tbl-religion presents sample demographic statistics. 
+
 \begin{landscape}
 ```{r, results = 'asis'}
 library(kableExtra)
@@ -482,14 +499,15 @@ table_demographics_x <- t1kable(
 
 table_demographics_x|> 
   kable_styling(
-    font_size = 7,
+    font_size = 6,
     latex_options = c("hold_position","striped", "repeat_header", "longtable") )
 ```
 \end{landscape}
-Demographic statistics by "Muslim
+Demographic statistics by Religious Affiliation (including Muslims)
 :::
-{{< pagebreak >}}
 
+{{< pagebreak >}}
+@tbl-religion presents sample response-statistics for Religious Belief, Identification, and Practice. 
 
 ::: {#tbl-religion}
 \begin{landscape}
@@ -525,6 +543,47 @@ table_religion_x |>
 \end{landscape}
 Sample statistics by Religious Denomination.
 :::
+{{< pagebreak >}}
+
+@tbl-discrim presents sample response-statistics for Perceived Discrimination.
+
+::: {#tbl-discrim}
+\begin{landscape}
+```{r, results = 'asis'}
+library(kableExtra)
+# as.data.frame(table_demographics) |>
+#   kbl(format="latex", booktabs = TRUE) |> 
+#   kable_styling(font_size = 8)
+# as.data.frame(table_demographics) |>
+#   kbl(
+#     format = "latex",
+#     booktabs = TRUE,
+#     longtable = TRUE  # Enable longtable format
+#   ) |>
+#   kable_styling(
+#     font_size = 8,
+#     latex_options = c("striped", "hold_position", "repeat_header", "longtable")
+#   )
+
+table_discrim_x <- t1kable(
+  table_discrim,
+  format = "latex",
+  booktabs = TRUE,
+  longtable = TRUE,
+) 
+
+table_discrim_x |>
+  kable_styling(
+    font_size = 7,
+    latex_options = c("hold_position", "repeat_header", "longtable")
+  )
+
+
+```
+\end{landscape}
+Sample Perceived Discrimination Statistics.
+:::
+
 
 {{< pagebreak >}}
 @tbl-health presents sample response-statistics for biological health.
@@ -563,11 +622,12 @@ table_health_x |>
 \end{landscape}
 Sample Biological Health Statistics.
 :::
+
 {{< pagebreak >}}
 
 @tbl-psych presents sample response-statistics for psychological health.
 
-::: {#tbl-pysch}
+::: {#tbl-psych}
 \begin{landscape}
 ```{r, results = 'asis'}
 library(kableExtra)
@@ -673,7 +733,6 @@ table_life_x|>
 \end{landscape}
 Sample Life-Related Well-Being Statistics.
 :::
-{{< pagebreak >}}
 
 {{< pagebreak >}}
 
@@ -713,85 +772,440 @@ Sample Life-Related Well-Being Statistics.
 :::
 {{< pagebreak >}}
 
+## Study 1: Comparative Models of Religious Beliefs and Behaviours
 
-@tbl-life presents sample response-statistics for multi-dimensional well-being.
+@fig-religion-id presents models for religious and spiritual identities adjusting for age, New Zealand born, ethnicity, and gender. The expected means and confidence intervals for these models are presented in @tbl-religion-id and @tbl-spiritual-id
 
-::: {#tbl-discrim}
-\begin{landscape}
-```{r, results = 'asis'}
-library(kableExtra)
-# as.data.frame(table_demographics) |>
-#   kbl(format="latex", booktabs = TRUE) |> 
-#   kable_styling(font_size = 8)
-# as.data.frame(table_demographics) |>
-#   kbl(
-#     format = "latex",
-#     booktabs = TRUE,
-#     longtable = TRUE  # Enable longtable format
-#   ) |>
-#   kable_styling(
-#     font_size = 8,
-#     latex_options = c("striped", "hold_position", "repeat_header", "longtable")
-#   )
-table_discrim_x <- t1kable(
-  table_discrim,
-  format = "latex",
-  booktabs = TRUE,
-  longtable = TRUE
-) 
-table_discrim_x|>
-  kable_styling(
-    font_size = 7,
-    latex_options = c("hold_position", "repeat_header", "longtable")
-   ) 
-   # kable_styling(latex_options = "striped", stripe_index = c(1,2, 5:6), stripe_color = "yellow")
-  # kable_styling(latex_options = c("stripe_index" = c(2:3)))
-  # kable_styling(latex_options = "scale_down")
+
+```{r}
+#| label: fig-religion-id
+#| fig-cap: "Religious and Spiritual Identity"
+#| eval: true
+#| include: true
+#| echo: false
+#| fig-height: 16
+#| fig-width: 16
+
+plot_id
+
 ```
-\end{landscape}
-Sample Religion Statistics.
-:::
-{{< pagebreak >}}
 
 
-@tbl-religion presents sample response-statistics for religious beliefs and practices.
-
-::: {#tbl-religion}
-\begin{landscape}
-```{r, results = 'asis'}
+::: {#tbl-religion-id}
+```{r, results= 'asis'}
+library(dplyr)
 library(kableExtra)
-# as.data.frame(table_demographics) |>
-#   kbl(format="latex", booktabs = TRUE) |> 
-#   kable_styling(font_size = 8)
-# as.data.frame(table_demographics) |>
-#   kbl(
-#     format = "latex",
-#     booktabs = TRUE,
-#     longtable = TRUE  # Enable longtable format
-#   ) |>
-#   kable_styling(
-#     font_size = 8,
-#     latex_options = c("striped", "hold_position", "repeat_header", "longtable")
-#   )
 
-as.data.frame(table_religion) |>
+#  table
+results_religion$predictions$religion_identification_level |>
+  as.data.frame() %>%                      # ensure it's a data frame
+  dplyr::select(-group) %>%                # remove the 'group' column
+  dplyr::rename(Religion = x) %>%          # rename 'x' to 'Religion'
   kbl(
     format = "latex",
     booktabs = TRUE,
-    longtable = TRUE#,
-   # caption = "Demographic Data Overview"
+    digits = 2,
+    row.names = FALSE                      # remove row names to eliminate any unintended columns
   ) |>
   kable_styling(
-    font_size = 6,
-    latex_options = c("hold_position", "repeat_header", "longtable")
-  ) 
- #|>
- # kable_styling(latex_options = "scale_down")
+    font_size = 11,
+    latex_options = c("repeat_header", "striped")  # remove "hold_position" to eliminate [!h]
+  )
 ```
-\end{landscape}
-Sample Religion Statistics.
+Adjusted means and 95% confidence intervals for religious identification by religious denomination.
 :::
+
+
+::: {#tbl-spiritual-id}
+```{r, results= 'asis'}
+# table
+results_religion$predictions$religion_spiritual_identification |>
+  as.data.frame() %>%                      # ensure it's a data frame
+  dplyr::select(-group) %>%                # remove the 'group' column
+  dplyr::rename(Religion = x) %>%          # rename 'x' to 'Religion'
+  kbl(
+    format = "latex",
+    booktabs = TRUE,
+    digits = 2,
+    row.names = FALSE                      # Remove row names to eliminate any unintended columns
+  ) |>
+  kable_styling(
+    font_size = 11,
+    latex_options = c("repeat_header", "striped")  # Removed "hold_position" to eliminate [!h]
+  )
+```
+Adjusted means and 95% confidence intervals for spiritual identification by religious denomination.
+:::
+
+
 {{< pagebreak >}}
+
+@fig-religion-belief presents models for religious and spiritual beliefs adjusting for age, New Zealand born, ethnicity, and gender. The expected means and confidence intervals for these models are presented in @tbl-religion-belief and @tbl-spiritual-belief
+
+
+
+```{r}
+#| label: fig-religion-belief
+#| fig-cap: "Religious and Spiritual Beliefs"
+#| eval: true
+#| include: true
+#| echo: false
+#| fig-height: 16
+#| fig-width: 16
+
+plot_belief
+```
+
+
+::: {#tbl-religion-belief}
+```{r, results= 'asis'}
+
+#  table
+results_religion$predictions$religion_believe_god_binary |>
+  as.data.frame() %>%                      # ensure it's a data frame
+  dplyr::select(-group) %>%                # remove the 'group' column
+  dplyr::rename(Religion = x) %>%          # rename 'x' to 'Religion'
+  kbl(
+    format = "latex",
+    booktabs = TRUE,
+    digits = 2,
+    row.names = FALSE                      # remove row names to eliminate any unintended columns
+  ) |>
+  kable_styling(
+    font_size = 11,
+    latex_options = c("repeat_header", "striped")  # remove "hold_position" to eliminate [!h]
+  )
+```
+Adjusted means and 95% confidence intervals for belief in God by religious denomination.
+:::
+
+
+::: {#tbl-spiritual-belief}
+```{r, results= 'asis'}
+# table
+results_religion$predictions$religion_believe_spirit_binary |>
+  as.data.frame() %>%                      # ensure it's a data frame
+  dplyr::select(-group) %>%                # remove the 'group' column
+  dplyr::rename(Religion = x) %>%          # rename 'x' to 'Religion'
+  kbl(
+    format = "latex",
+    booktabs = TRUE,
+    digits = 2,
+    row.names = FALSE                      # Remove row names to eliminate any unintended columns
+  ) |>
+  kable_styling(
+    font_size = 11,
+    latex_options = c("repeat_header", "striped")  # Removed "hold_position" to eliminate [!h]
+  )
+```
+Adjusted means and 95% confidence intervals for sbelief in a Spirit or Life Force by religious denomination.
+:::
+
+
+
+{{< pagebreak >}}
+
+@fig-religion-practice presents models for religious and spiritual practices, again adjusting for age, New Zealand born, ethnicity, and gender. The expected means and confidence intervals for these models are presented in @tbl-religion-church,  @tbl-religion-prayer, and @tbl-religion-scripture.
+
+
+
+```{r}
+#| label: fig-religion-practice
+#| fig-cap: "Religious and Spiritual Practices"
+#| eval: true
+#| include: true
+#| echo: false
+#| fig-height: 16
+#| fig-width: 16
+
+plot_practice
+```
+
+
+::: {#tbl-religion-church}
+```{r, results= 'asis'}
+
+#  table
+results_religion$predictions$religion_church |>
+  as.data.frame() %>%                      # ensure it's a data frame
+  dplyr::select(-group) %>%                # remove the 'group' column
+  dplyr::rename(Religion = x) %>%          # rename 'x' to 'Religion'
+  kbl(
+    format = "latex",
+    booktabs = TRUE,
+    digits = 2,
+    row.names = FALSE                      # remove row names to eliminate any unintended columns
+  ) |>
+  kable_styling(
+    font_size = 11,
+    latex_options = c("repeat_header", "striped")  # remove "hold_position" to eliminate [!h]
+  )
+```
+Adjusted means and 95% confidence intervals for monthly religious service attendance by religious denomination.
+:::
+
+
+::: {#tbl-religion-prayer}
+```{r, results= 'asis'}
+
+#  table
+results_religion$predictions$religion_prayer |>
+  as.data.frame() %>%                      # ensure it's a data frame
+  dplyr::select(-group) %>%                # remove the 'group' column
+  dplyr::rename(Religion = x) %>%          # rename 'x' to 'Religion'
+  kbl(
+    format = "latex",
+    booktabs = TRUE,
+    digits = 2,
+    row.names = FALSE                      # remove row names to eliminate any unintended columns
+  ) |>
+  kable_styling(
+    font_size = 11,
+    latex_options = c("repeat_header", "striped")  # remove "hold_position" to eliminate [!h]
+  )
+```
+Adjusted means and 95% confidence intervals for weekly prayer by religious denomination.
+:::
+
+
+::: {#tbl-religion-scripture}
+```{r, results= 'asis'}
+
+#  table
+results_religion$predictions$religion_scripture |>
+  as.data.frame() %>%                      # ensure it's a data frame
+  dplyr::select(-group) %>%                # remove the 'group' column
+  dplyr::rename(Religion = x) %>%          # rename 'x' to 'Religion'
+  kbl(
+    format = "latex",
+    booktabs = TRUE,
+    digits = 2,
+    row.names = FALSE                      # remove row names to eliminate any unintended columns
+  ) |>
+  kable_styling(
+    font_size = 11,
+    latex_options = c("repeat_header", "striped")  # remove "hold_position" to eliminate [!h]
+  )
+```
+Adjusted means and 95% confidence intervals for weekly prayer by religious denomination.
+:::
+
+
+{{< pagebreak >}}
+## Study 2: Comparative Models of Perceived Prejudice
+
+
+@fig-discrim presents models for perceived discrimination, adjusting for age, New Zealand born, ethnicity, and gender. The expected means and confidence intervals for these models are presented in @tbl-discrim-age, @tbl-discrim-gender,   @tbl-discrim-ethnicity, and @tbl-discrim-religion, 
+
+```{r}
+#| label: fig-discrim
+#| fig-cap: "Religious and Spiritual Practices"
+#| eval: true
+#| include: true
+#| echo: false
+#| fig-height: 16
+#| fig-width: 16
+
+plot_descrim
+```
+
+::: {#tbl-discrim-age}
+```{r, results= 'asis'}
+
+#  table
+results_discrim$predictions$perc_age_discrim|>
+  as.data.frame() %>%                      # ensure it's a data frame
+  dplyr::select(-group) %>%                # remove the 'group' column
+  dplyr::rename(Religion = x) %>%          # rename 'x' to 'Religion'
+  kbl(
+    format = "latex",
+    booktabs = TRUE,
+    digits = 2,
+    row.names = FALSE                      # remove row names to eliminate any unintended columns
+  ) |>
+  kable_styling(
+    font_size = 11,
+    latex_options = c("repeat_header", "striped")  # remove "hold_position" to eliminate [!h]
+  )
+```
+Adjusted means and 95% confidence intervals for perceived age discrimination.
+:::
+
+
+::: {#tbl-discrim-gender}
+```{r, results= 'asis'}
+
+#  table
+results_discrim$predictions$perc_gend_discrim|>
+  as.data.frame() %>%                      # ensure it's a data frame
+  dplyr::select(-group) %>%                # remove the 'group' column
+  dplyr::rename(Religion = x) %>%          # rename 'x' to 'Religion'
+  kbl(
+    format = "latex",
+    booktabs = TRUE,
+    digits = 2,
+    row.names = FALSE                      # remove row names to eliminate any unintended columns
+  ) |>
+  kable_styling(
+    font_size = 11,
+    latex_options = c("repeat_header", "striped")  # remove "hold_position" to eliminate [!h]
+  )
+```
+Adjusted means and 95% confidence intervals for perceived gender discrimination.
+:::
+
+
+::: {#tbl-discrim-ethnicity}
+```{r, results= 'asis'}
+
+#  table
+results_discrim$predictions$perc_discrim|>
+  as.data.frame() %>%                      # ensure it's a data frame
+  dplyr::select(-group) %>%                # remove the 'group' column
+  dplyr::rename(Religion = x) %>%          # rename 'x' to 'Religion'
+  kbl(
+    format = "latex",
+    booktabs = TRUE,
+    digits = 2,
+    row.names = FALSE                      # remove row names to eliminate any unintended columns
+  ) |>
+  kable_styling(
+    font_size = 11,
+    latex_options = c("repeat_header", "striped")  # remove "hold_position" to eliminate [!h]
+  )
+```
+Adjusted means and 95% confidence intervals for perceived ethnic discrimination.
+:::
+
+
+::: {#tbl-discrim-religion}
+```{r, results= 'asis'}
+
+#  table
+results_discrim$predictions$perc_religious_discrim|>
+  as.data.frame() %>%                      # ensure it's a data frame
+  dplyr::select(-group) %>%                # remove the 'group' column
+  dplyr::rename(Religion = x) %>%          # rename 'x' to 'Religion'
+  kbl(
+    format = "latex",
+    booktabs = TRUE,
+    digits = 2,
+    row.names = FALSE                      # remove row names to eliminate any unintended columns
+  ) |>
+  kable_styling(
+    font_size = 11,
+    latex_options = c("repeat_header", "striped")  # remove "hold_position" to eliminate [!h]
+  )
+```
+Adjusted means and 95% confidence intervals for perceived religious discrimination.
+:::
+
+{{< pagebreak >}}
+## Study 3: Comparative Models of Biological Health
+
+@fig-health presents models for indicators related to biological health, adjusting for age, New Zealand born, ethnicity, and gender.
+
+```{r}
+#| label: fig-health
+#| fig-cap: "Biological Health"
+#| eval: true
+#| include: true
+#| echo: false
+#| fig-height: 16
+#| fig-width: 16
+
+plot_health
+```
+{{< pagebreak >}}
+
+
+## Study 4: Comparative Models of Self-Related Well-Being
+
+
+@fig-self-a presents models for personal well-being in dimensions of self-esteem, forgiveness, and perfectionism, adjusting for age, New Zealand born, ethnicity, and gender.
+
+```{r}
+#| label: fig-self-a
+#| fig-cap: "Self-Esteem, Forgiveness, Perfectionism"
+#| eval: true
+#| include: true
+#| echo: false
+#| fig-height: 16
+#| fig-width: 16
+
+plot_present_a
+
+```
+{{< pagebreak >}}
+@fig-self-b presents models for personal well-being, adjusting for age, New Zealand born, ethnicity, and gender.
+
+```{r}
+#| label: fig-self-b
+#| fig-cap: "Personal Well-Being"
+#| eval: true
+#| include: true
+#| echo: false
+#| fig-height: 16
+#| fig-width: 16
+
+plot_present_b
+
+```
+{{< pagebreak >}}
+
+## Study 5: Comparative Models of Life-Related Well-Being
+
+@fig-life presents models for personal well-being, adjusting for age, New Zealand born, ethnicity, and gender.
+
+```{r}
+#| label: fig-life
+#| fig-cap: "Personal Well-Being"
+#| eval: true
+#| include: true
+#| echo: false
+#| fig-height: 16
+#| fig-width: 16
+
+plot_life
+
+```
+{{< pagebreak >}}
+
+## Study 6: Comparative Models of Social Well-Being
+
+
+@fig-social-support presents models for social belonging, adjusting for age, New Zealand born, ethnicity, and gender.
+
+```{r}
+#| label: fig-social-support
+#| fig-cap: "Personal Well-Being"
+#| eval: true
+#| include: true
+#| echo: false
+#| fig-height: 16
+#| fig-width: 16
+
+plot_social_support
+```
+{{< pagebreak >}}
+@fig-social-belong presents models for social belonging, adjusting for age, New Zealand born, ethnicity, and gender.
+
+```{r}
+#| label: fig-social-belong
+#| fig-cap: "Personal Well-Being"
+#| eval: true
+#| include: true
+#| echo: false
+#| fig-height: 16
+#| fig-width: 16
+
+plot_social_belong
+
+```
+{{< pagebreak >}}
+
+
+### Conclusions 
 
 
 
@@ -813,7 +1227,7 @@ The New Zealand Attitudes and Values Study is supported by a grant from the Temp
 
 ### Author Statement
 
-**TBA**:  
+**TBA**:  UA led the MSD and led the interpretation of the analysis. CGS led data collection. JB prepared the tables and graphs.  All authors contributed to the writing of this manuscript.
 
 
 {{< pagebreak >}}
@@ -821,47 +1235,19 @@ The New Zealand Attitudes and Values Study is supported by a grant from the Temp
 
 
 
-## Appendix A: Sample Descriptive Statistics {#appendix-a}
-
-@tbl-sample presents descriptive statistics for the sample stratified by religious denominations.
-
-{{< pagebreak >}}
+## Appendix A: Measures {#appendix-a}
 
 
-::: {#tbl-sample}
-\begin{landscape}
-```{r, results = 'asis'}
-library(kableExtra)
-# as.data.frame(table_demographics) |>
-#   kbl(format="latex", booktabs = TRUE) |> 
-#   kable_styling(font_size = 8)
-# as.data.frame(table_demographics) |>
-#   kbl(
-#     format = "latex",
-#     booktabs = TRUE,
-#     longtable = TRUE  # Enable longtable format
-#   ) |>
-#   kable_styling(
-#     font_size = 8,
-#     latex_options = c("striped", "hold_position", "repeat_header", "longtable")
-#   )
 
-as.data.frame(table_demographics) |>
-  kbl(
-    format = "latex",
-    booktabs = TRUE,
-    longtable = TRUE#,
-   # caption = "Demographic Data Overview"
-  ) |>
-  kable_styling(
-    font_size = 6,
-    latex_options = c("striped", "hold_position", "repeat_header", "longtable")
-  ) |>
-  kable_styling(latex_options = "scale_down")
+
+```{r, results='asis'}
+#| eval: true
+#| include: true
+
+cat(outcome_measures)
+
 ```
-\end{landscape}
-Sample statistics.
-:::
+
 {{< pagebreak >}}
 
 
