--- a/manuscripts/manuscripts.qmd
+++ b/manuscripts/manuscripts.qmd
@@ -1,67 +1,466 @@
 ---
-title: "My Title"
-shorttitle: "Short Title in Running Header"
-author:
-  - name: Jane Doe
-    corresponding: true
-    orcid: 0000-0000-0000-0001
-    email: janedoe@generic.edu
-    affiliations:
-      - name: Generic University
-        department: Department of Scholarly Studies
-        address: 1234 Capital St.
-        city: New York
-        region: NY
-        country: USA
-        postal-code: 12084-1234
-author-note:
-  status-changes: 
-    affiliation-change: ~
-    deceased: ~
-  disclosures:
-    study-registration: ~
-    data-sharing: ~
-    related-report: ~
-    conflict-of-interest: ~
-    financial-support: ~
-    gratitude: ~
-    authorship-agreements: ~
-abstract: "This document is a template."
-keywords: [keyword1, keyword2, keyword3]
-bibliography: bibliography.bib
+title: "The New Zealand Muslim Diversity Study: Baseline Sample Information 2023-2024"
+abstract: |
+  In this study, we present demographic statistics from the first wave of the New Zealand Muslim Diversity Study (MSD 2023-2024). We describe patterns of religious identity and behaviour within the MDS cohort and examine self-reported multi-dimensional well-being. By comparing Muslim demographic, religious, and psychological diversity with that of the broader New Zealand population, we discover patterns of variation within and between religious groups that are not evident from group affiliations alone. Our findings uncover new commonalities between Muslims and other highly religious groups in New Zealand, and clarify that group-level averages do not capture the full spectrum of individual religious differences.
+   **KEYWORDS**: Diversity; Longitudinal; Muslim, Panel; Religion
+author: 
+  - name: M. Usman Afzali
+    affiliation: University of Otago New Zealand
+    orcid: 0000-0003-3169-6576 
+  - name: Aarif Rasheed
+    affiliation:  University of Otago New Zealand
+    orcid: 0000-0000-0000-0000
+  - name: Chris G. Sibley
+    affiliation: School of Psychology, University of Auckland, New Zealand
+    orcid: 0000-0002-4064-8800
+  - name: Kumar Yogeswaaran
+    affiliation: University of Canterbury New Zealand
+    orcid: 0000-0002-1978-5077
+  - name: Joseph A. Bulbulia
+    affiliation: Victoria University of Wellington, New Zealand
+    orcid: 0000-0002-5861-2056
+    email: joseph.bulbulia@vuw.ac.nz
+    corresponding: yes
+editor_options: 
+    chunk_output_type: console
 format:
-  apaquarto-docx: default
-  apaquarto-html: default
-  apaquarto-pdf:
-    documentmode: man
+  pdf:  
+    bibliography: /Users/joseph/GIT/templates/bib/references.bib
+    pdf-engine: lualatex
+    sanitise: true
     keep-tex: true
+    link-citations: true
+    colorlinks: true
+    documentclass: article
+    classoption: [single column]
+    lof: false
+    lot: false
+    geometry:
+      - top=30mm
+      - left=25mm
+      - heightrounded
+      - headsep=22pt
+      - headheight=11pt
+      - footskip=33pt
+      - ignorehead
+      - ignorefoot
+    template-partials: 
+      - /Users/joseph/GIT/templates/quarto/title.tex
+    header-includes:
+      - \input{/Users/joseph/GIT/latex/latex-for-quarto.tex}
+      - \let\oldtabular\tabular
+      - \renewcommand{\tabular}{\small\oldtabular}
+      - \setlength{\tabcolsep}{4pt}  % Adjust this value as needed
+date: last-modified
+execute:
+  echo: false
+  warning: false
+  include: true
+  eval: true
+fontfamily: libertinus
+bibliography: /Users/joseph/GIT/templates/bib/references.bib
+csl: /Users/joseph/GIT/templates/csl/camb-a.csl
 ---
 
-@CameronTrivedi2013
+```{r}
+#| label: load-libraries
+#| echo: false
+#| include: false
+#| eval: true
 
-# Method
+# detach("package:margot", unload = TRUE)
+# devtools::install_github("go-bayes/margot")
+# for making graphs
+library("tinytex")
+library("extrafont")
+loadfonts(device = "all")
 
-## Participants
+# reproducibility
+set.seed(123)
 
-## Measures
+# rendering document
+library("margot")
+library("glue")
+library("patchwork")
+library("kableExtra")
+library("stringr")
+library("ggplot2")
+library("ggeffects")
+library("parameters")
+library("table1")
+library("printr")
+packageVersion(pkg = 'margot')
 
-## Procedure
+# path to data folder (set to path on your computer) - for pushing and pulling model results
+push_mods <- here::here("/Users/joseph/Library/CloudStorage/Dropbox-v-project/data/24-muslims")
 
-# Results
 
-# Discussion
+# exposure_var = "muslim_binary"
+# name_exposure = "muslim_binary"
 
-## Limitations and Future Directions
+# table for muslim on religion
+table_demographics <- here_read("table_demographics")
+table_health <- here_read("table_health")
+table_psych <- here_read("table_psych")
+table_present<- here_read("table_present")
 
-## Conclusion
+table_social<- here_read("table_social")
+table_life <- here_read("table_life")
+table_religion <- here_read("table_religion")
+table_discrim <- here_read("table_discrim")
 
-# References
+prop_miss_case <- here_read("prop_miss_case")
+results_religion <- here_read_qs("results_religion", push_mods)
+results_life <- here_read_qs("results_life", push_mods)
+results_psych <- here_read_qs("results_psych", push_mods)
 
-<!-- References will auto-populate in the refs div below -->
+n_total <- here_read("n_total")
+n_15 <- here_read("n_15")
+n_mus_pre<- here_read("n_mus_pre")
 
-::: {#refs}
+n_participants<- here_read("n_participants")
+# varaibles
+exposure_var = "religion_bigger_denominations"
+name_exposure = "religion_bigger_denominations"
+
+baseline_vars <- here_read("baseline_vars")
+outcome_vars <- here_read("outcome_vars")
+baseline_vars
+outcome_vars
+# joseph.bulbulia@gmail.com (joseph.bulbulia@vuw.ac.nz)
+set.seed(123)
+prop_miss_case<- here_read("prop_miss_case")
+
+
+
+# read models
+results_religion<- here_read_qs("results_religion", push_mods)
+results_discrim <- here_read_qs("results_discrim", push_mods)
+results_life <- here_read_qs("results_life", push_mods)
+results_psych<- here_read_qs("results_psych", push_mods)
+results_social<- here_read_qs("results_social", push_mods)
+results_present<- here_read_qs("results_present", push_mods)
+results_health<- here_read_qs("results_health", push_mods)
+
+
+# #predictions
+# present_forgive <- results_present$plots$Forgiveness+ theme(axis.text.x = element_text(
+#   angle = 20,
+#   hjust = 1,
+#   vjust = 1
+# ))
+# 
+# present_perfect <- results_present$plots$Perfectionism+ theme(axis.text.x = element_text(
+#   angle = 20,
+#   hjust = 1,
+#   vjust = 1
+# ))
+# 
+# 
+# present_esteem <- results_present$plots$`Self Esteem`+ theme(axis.text.x = element_text(
+#   angle = 20,
+#   hjust = 1,
+#   vjust = 1
+# ))
+# 
+# 
+# present_pwb_a <- results_present$plots$`PWB Standard Living` + scale_y_continuous(limits = c(-0.5,10.5))+ theme(axis.text.x = element_text(
+#   angle = 20,
+#   hjust = 1,
+#   vjust = 1
+# ))
+# present_pwb_b <- results_present$plots$`PWB Standard Living` + scale_y_continuous(limits = c(-0.5,10.5))+ theme(axis.text.x = element_text(
+#   angle = 20,
+#   hjust = 1,
+#   vjust = 1
+# ))
+# present_pwb_c <- results_present$plots$`PWB Your Health` + scale_y_continuous(limits = c(-0.5,10.5))+ theme(axis.text.x = element_text(
+#   angle = 20,
+#   hjust = 1,
+#   vjust = 1
+# ))
+# present_pwb_d  <- results_present$plots$`PWB Your Relationships`+ scale_y_continuous(limits = c(-0.5,10.5))+ theme(axis.text.x = element_text(
+#   angle = 20,
+#   hjust = 1,
+#   vjust = 1
+# ))
+# 
+# 
+# # access individual plots Religion
+# religion_relid <- results_religion$plots$`Religious Identification Level`+ theme(
+#     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1))
+#   
+# religion_spirid <- results_religion$plots$`Spiritual Identification Level`+ theme(
+#     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1))
+#   
+# 
+# religion_church <- results_religion$plots$`Monthly Religious Service Attendence` + theme(axis.text.x = element_text(
+#   angle = 20,
+#   hjust = 1,
+#   vjust = 1
+# )) +  scale_y_continuous(limits = c(-1,30))
+#    
+# religion_scripture <- results_religion$plots$`Weekly Scripture`  + scale_y_continuous(limits = c(-1,100))+ theme(axis.text.x = element_text(
+#   angle = 20,
+#   hjust = 1,
+#   vjust = 1
+# )) 
+# 
+# 
+# religion_scripture <- results_religion$plots$`Weekly Scripture`  + scale_y_continuous(limits = c(-1,100))+ theme(axis.text.x = element_text(
+#   angle = 20,
+#   hjust = 1,
+#   vjust = 1
+# )) 
+# 
+# 
+# religion_prayer <- results_religion$plots$`Weekly Prayer`+ scale_y_continuous(limits = c(-1,100))+ theme(axis.text.x = element_text(
+#   angle = 20,
+#   hjust = 1,
+#   vjust = 1
+# )) 
+# 
+# 
+# religion_god <- results_religion$plots$`Belief in God`+ scale_y_continuous(limits = c(-0,1.1)) + theme(axis.text.x = element_text(
+#   angle = 20,
+#   hjust = 1,
+#   vjust = 1
+# )) 
+# 
+# religion_spirit <- results_religion$plots$`Belief in Spirit`+ scale_y_continuous(limits = c(-0,1.1)) + theme(axis.text.x = element_text(
+#   angle = 20,
+#   hjust = 1,
+#   vjust = 1
+# )) 
+# 
+# 
+# # access individual plots discrimination
+# 
+# 
+# discrim_ethnic <- results_discrim$plots$`Perceived Ethnic Discrimination`+ theme(
+#     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1))
+# discrim_religious <- results_discrim$plots$`Perceived Religious Discrimination`+ theme(
+#     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1))
+# discrim_gender<- results_discrim$plots$`Perceived Gender Discrimination`+ theme(
+#     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1))
+# discrim_age <- results_discrim$plots$`Perceived Age Discrimination`+ theme(
+#     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1))
+#     
+# 
+# # access individual plots health
+# 
+# health_sleep <- results_health$plots$Sleep+ theme(
+#     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1)) +  scale_y_continuous(limits = c(.5,15))
+# health_sleep
+# 
+# health_exercise <- results_health$plots$`Hours of Exercise (log)`+ theme(
+#     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1)) +  scale_y_continuous(limits = c(0,6))
+# health_exercise
+
+exp(1)-1
+exp(2)-1
+exp(3)-1
+exp(4)-1
+
+# health_short_form_health <- results_health$plots$`Short Form Health`+ theme(
+#     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1))  +  scale_y_continuous(limits = c(.5,7))
+#     
+# health_short_form_health
+# # access individual plots psychological wellbeing
+# life_grd <- results_life$plots$Gratitude+ theme(
+#     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1)
+#   )
+# life_sat<- results_life$plots$`Life Satisfaction`+ theme(
+#     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1)
+#   )
+# life_mp <- results_life$plots$`Meaning: Purpose`+ theme(
+#     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1)
+#   )
+# life_ms <- results_life$plots$`Meaning: Sense`+ theme(
+#     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1)
+#   )
+# 
+# # access individual plots life-reflective wellbeing
+# results_psych$plots$Anxiety+ scale_y_continuous(limits = c(-.5,5))+ theme(
+#     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1)
+#   )
+# results_psych$plots$Depression + scale_y_continuous(limits = c(-.5,5))+ theme(
+#     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1)
+#   )
+# results_psych$plots$Fatigue+ scale_y_continuous(limits = c(-.5,5))+ theme(
+#     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1)
+#   )
+# results_psych$plots$Rumination+ scale_y_continuous(limits = c(-.5,5)) + theme(
+#     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1)
+#   )
+# 
+# social_belong_a <- results_social$plots$`Belonging - Acceptance` + scale_y_continuous(limits = c(.5,7.5)) + theme(axis.text.x = element_text(
+#   angle = 20,
+#   hjust = 1,
+#   vjust = 1
+# ))
+#     
+#     
+# social_belong_b <- results_social$plots$`Belonging - Shared Beliefs` + scale_y_continuous(limits = c(.5,7.5)) + theme(axis.text.x = element_text(
+#   angle = 20,
+#   hjust = 1,
+#   vjust = 1
+# ))
+#   
+# social_belong_c  <-
+#   results_social$plots$`Belonging - Outsider (Reversed)` + scale_y_continuous(limits = c(.5,7.5)) + theme(axis.text.x = element_text(
+#   angle = 20,
+#   hjust = 1,
+#   vjust = 1
+# ))
+# 
+# social_neighbourhood <- results_social$plots$`Neighbourhood Community`+ scale_y_continuous(limits = c(.5,7.5)) + theme(
+#     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1)) + theme(axis.text.x = element_text(
+#   angle = 20,
+#   hjust = 1,
+#   vjust = 1
+# ))
+# 
+# social_support_a <- results_social$plots$`Support - Help Availability`+ scale_y_continuous(limits = c(.5,7.5)) + theme(
+#     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1)) + theme(axis.text.x = element_text(
+#   angle = 20,
+#   hjust = 1,
+#   vjust = 1
+# ))
+# 
+# social_support_b <- results_social$plots$`Support - No Guidance (Reversed)`+ scale_y_continuous(limits = c(.5,7.5)) + theme(
+#     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1)) + theme(axis.text.x = element_text(
+#   angle = 20,
+#   hjust = 1,
+#   vjust = 1
+# ))
+# 
+# social_support_c <- results_social$plots$`Support - Someone to Turn To`+ scale_y_continuous(limits = c(.5,7.5)) + theme(
+#     axis.text.x = element_text(angle = 20, hjust = 1, vjust = 1)) + theme(axis.text.x = element_text(
+#   angle = 20,
+#   hjust = 1,
+#   vjust = 1
+# ))
+# 
+# 
+# # combo plots
+# 
+# plot_belief <- religion_god + religion_spirit + plot_annotation(title = "Religious Beliefs",subtitle = "Adjusted for Age, Born in NZ,Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
+# 
+# plot_practice <- religion_church / (religion_prayer + religion_scripture)+ plot_annotation(title = "Religious Practice",subtitle = "Adjusted for Age, Born in NZ,Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
+# 
+# plot_id <- religion_relid + religion_spirid + plot_annotation(title = "Religious and Spiritual Identification",subtitle = "Adjusted for Age, Born in NZ,Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
+# 
+# plot_life <- life_grd + life_sat + life_mp + life_ms + plot_annotation(title = "Life-Reflective Well-Being",subtitle = "Adjusted for Age, Born in NZ,Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
+# 
+# plot_descrim <- discrim_age  + discrim_gender + discrim_ethnic + discrim_religious +
+#   plot_annotation(title = "Perceived Dicrimination",subtitle = "Adjusted for Age, Born in NZ,Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
+# 
+# 
+# plot_social_belong <- social_belong_a  + social_belong_b + social_belong_c  +social_neighbourhood +
+#   plot_annotation(title = "Social Belonging and Neighbourhood Community",subtitle = "Adjusted for Age, Born in NZ,Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
+# 
+# plot_social_support <- social_belong_a  + social_belong_b + social_belong_c   +
+#   plot_annotation(title = "Social Belonging",subtitle = "Adjusted for Age, Born in NZ,Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
+# 
+# 
+# plot_social_support <- social_belong_a  + social_belong_b + social_belong_c   +
+#   plot_annotation(title = "Social Belonging",subtitle = "Adjusted for Age, Born in NZ,Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
+# 
+# plot_present_a <- present_esteem + present_forgive + present_perfect +
+#   plot_annotation(title = "Personal Well-Being Indicators",subtitle = "Adjusted for Age, Born in NZ,Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
+# 
+# plot_present_b <- present_pwb_a + present_pwb_b + present_pwb_c + present_pwb_d +
+#   plot_annotation(title = "Personal Well-Being Index",subtitle = "Adjusted for Age, Born in NZ,Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
+# 
+# 
+# plot_health <- health_short_form_health  + (health_exercise /  health_sleep) +
+#   plot_annotation(title = "Biological Health",subtitle = "Adjusted for Age, Born in NZ,Ethnicity, and Gender", tag_levels = "A") + plot_layout(guides = 'collect')
+# 
+
+# checks
+# plot_belief
+# plot_id
+# plot_practice
+# plot_descrim
+# plot_present_a
+# plot_present_b
+# plot_life
+# plot_social_belong
+# plot_social_support
+
+# read data (use 01 script to data wrangle)
+# dat_long_imputed_bounds_ordinal <- margot::here_read_qs("dat_long_imputed_bounds_ordinal", push_mods)
+
+# 
+# measures_path_rstudio <- here::here("manuscripts", "24-usman-mus-diversity")
+# measure_data <- readRDS(here::here(measures_path_rstudio, "merged_db.rds"))
+# 
+# outcome_measures <- boilerplate::boilerplate_report_measures(
+#   baseline_vars = baseline_vars,
+#   outcome_vars = outcome_vars,
+#   measure_data = measure_data
+# )
+
+```
+
+
+The New Zealand Attitudes and Values Study (NZAVS) is a nationally representative panel study of New Zealanders started in 2009. It has measured `r n_total` participants annually, and is presently tracking `r n_15` participants, about 1% of New Zealand's adult population. 
+
+Despite strong NZAVS coverage of New Zealand's denominations, in the largest NZAVS cohort, less than .01% of New Zealand's Muslims were participating (n = `r n_mus_pre`). That is, the New Zealand Attitudes and Values Study was under-representing Muslims by an order of magnitude below the New Zealand census estimates. 
+
+The Muslim Diversity Study, led by Usman Afzali (UA), has been built through partnership with the Muslim community partnerships to boost the New Zealand Attitudes and Values Muslim sample by ~600 participants to obtain coverage of about 1% of the New Zealand Census estimate of New Zealand Muslim Community.
+
+The premise of this study has been to enable extend national longitudinal science of the study of Muslim diversity and flourishing over the lifespan, to understand the scope of such diversity and the challenges to such flourishing, and to clarify the affordances through which Muslims overcome adversity that has been previously documented in other research (refs.)
+
+The Muslim Diversity Study is important first, because the lifelong dynamics of Muslim flourishing are poorly understood; this project addresses an urgent scientific need.
+
+Second, our work with the Muslim community revealed a strong community interest in Muslim flourishing science; this project is an attempt to address this interest by involving Muslims in this science. 
+
+Third, this project serves as a model for developing panel studies of under-represented groups in Aoteoroa New Zealand and in other countries. 
+
+
+
+@tbl-religion-id
+
+::: {#tbl-religion-id}
+```{r, results= 'asis'}
+library(dplyr)
+library(kableExtra)
+
+# Prepare and style the table
+results_religion$predictions$religion_identification_level |>
+  as.data.frame() %>%                      # ensure it's a data frame
+  dplyr::select(-group) %>%                # remove the 'group' column
+  dplyr::rename(Religion = x) %>%          # rename 'x' to 'Religion'
+  kbl(
+    format = "latex",
+    booktabs = TRUE,
+    digits = 2,
+    row.names = FALSE                      # Remove row names to eliminate any unintended columns
+  ) |>
+  kable_styling(
+    font_size = 11,
+    latex_options = c("repeat_header", "striped")  # Removed "hold_position" to eliminate [!h]
+  )
+```
+Adjusted means and 95% confidence intervals for religious identification by religious denomination.
 :::
 
-# Appendix
 
-# Title for Appendix
+
+
+
+
+## References {.appendix}
+
+
+
+
+
+
+
+
+
+
+
